#224 add check for allowed extern groups when using delegated authentication