@@ -3,7 +3,9 @@ package de.triology.cas.oidc.beans.delegation;
 import de.triology.cas.ldap.CesInternalLdapUser;
 import de.triology.cas.ldap.UserManager;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang.ArrayUtils;
 import org.apereo.cas.authentication.Credential;
+import org.apereo.cas.authentication.adaptive.UnauthorizedAuthenticationException;
 import org.apereo.cas.authentication.principal.DelegatedAuthenticationPreProcessor;
 import org.apereo.cas.authentication.principal.Principal;
 import org.apereo.cas.authentication.principal.Service;
@@ -22,17 +24,44 @@ import java.util.Map;
 @RequiredArgsConstructor
 public class CesDelegatedAuthenticationPreProcessor implements DelegatedAuthenticationPreProcessor {
 
+    private final static String alreadyMappedAttributeName = "cesAttributesAlreadyMapped";
     private final static String groupsAttributeName = "groups";
-
-    private final List<AttributeMapping> attributeMappings;
+    private final static String externalGroupsAttributeName = "externalGroups";
 
     private final UserManager userManager;
 
+    private final List<AttributeMapping> attributeMappings;
+
+    private final String[] allowedGroups;
+
+    private final String[] adminUsernames;
+
+
     @Override
     public Principal process(Principal principal, BaseClient client, Credential credential, Service service) throws Throwable {
+        mapAttributes(principal);
 
-        // map attributes
+        if (!checkExternalAllowedGroups(principal)) {
+            throw new UnauthorizedAuthenticationException("user is not assigned to any of the allowed groups");
+        }
+
+        // attach internal groups
+        CesInternalLdapUser existingLdapUser = userManager.getUserByUid(principal.getId());
+        if (existingLdapUser != null) {
+            principal.getAttributes().put(groupsAttributeName, Arrays.asList(existingLdapUser.getGroups().toArray()));
+        }
+
+        return principal;
+    }
+
+    private void mapAttributes(Principal principal) {
         Map<String, List<Object>> principalAttributes = principal.getAttributes();
+
+        if (principalAttributes.containsKey(alreadyMappedAttributeName)) {
+            // attributes were already mapped
+            return;
+        }
+
         for (AttributeMapping mapping : attributeMappings) {
             List<Object> attributeValues = principalAttributes.get(mapping.getSource());
             if (attributeValues != null) {
@@ -40,12 +69,27 @@ public class CesDelegatedAuthenticationPreProcessor implements DelegatedAuthenti
             }
         }
 
-        // attach groups
-        CesInternalLdapUser existingLdapUser = userManager.getUserByUid(principal.getId());
-        if (existingLdapUser != null) {
-            principal.getAttributes().put(groupsAttributeName, Arrays.asList(existingLdapUser.getGroups().toArray()));
+        principalAttributes.put(alreadyMappedAttributeName, List.of(true));
+    }
+
+    private boolean checkExternalAllowedGroups(Principal principal) {
+        if (ArrayUtils.isEmpty(allowedGroups)) {
+            // no allowed groups configured -> access for all
+            return true;
         }
 
-        return principal;
+        List<Object> groups = principal.getAttributes().get(externalGroupsAttributeName);
+        if (groups == null) {
+            return false;
+        }
+
+        for (Object group : groups) {
+            if (ArrayUtils.contains(allowedGroups, group.toString())) {
+                return true;
+            }
+        }
+
+        return false;
+
     }
 }
